--- a/dewey-service-rest/pom.xml
+++ b/dewey-service-rest/pom.xml
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>no.nb.microservices.catalogsearch</groupId>
             <artifactId>catalog-search-service-model</artifactId>
-            <version>${project.version}</version>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>no.nb.commons</groupId>
