--- a/dewey-service-rest/pom.xml
+++ b/dewey-service-rest/pom.xml
@@ -35,7 +35,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>no.nb.microservice.dewey</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>dewey-service-model</artifactId>
             <version>${project.version}</version>
         </dependency>
