--- a/dewey-service-rest/pom.xml
+++ b/dewey-service-rest/pom.xml
@@ -40,6 +40,16 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>no.nb.microservices.catalogsearch</groupId>
+            <artifactId>catalog-search-service-model</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>no.nb.microservices.catalogsearch</groupId>
+            <artifactId>catalog-search-service-rest</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>no.nb.commons</groupId>
             <artifactId>commons-web-utils</artifactId>
             <version>-14</version>
