--- a/dewey-service-rest/pom.xml
+++ b/dewey-service-rest/pom.xml
@@ -39,16 +39,16 @@
             <artifactId>dewey-service-model</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <dependency>
-            <groupId>no.nb.microservices.catalogsearch</groupId>
-            <artifactId>catalog-search-service-model</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>no.nb.microservices.catalogsearch</groupId>
-            <artifactId>catalog-search-service-rest</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>no.nb.microservices.catalogsearch</groupId>-->
+            <!--<artifactId>catalog-search-service-model</artifactId>-->
+            <!--<version>1.0-SNAPSHOT</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>no.nb.microservices.catalogsearch</groupId>-->
+            <!--<artifactId>catalog-search-service-rest</artifactId>-->
+            <!--<version>1.0-SNAPSHOT</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>no.nb.commons</groupId>
             <artifactId>commons-web-utils</artifactId>
