--- a/dewey-service-rest/src/main/resources/bootstrap.yml
+++ b/dewey-service-rest/src/main/resources/bootstrap.yml
@@ -1,8 +1,23 @@
 spring:
   application:
-    name: dewey-Service
+    name: dewey-service
   cloud:
     config:
-      uri: ${SPRING_CONFIG_URI:http://localhost:8888}
       failFast: false
+      discovery:
+        enabled: true
 
+---
+
+spring:
+  profiles: docker
+  cloud:
+    config:
+      failFast: true
+
+eureka:
+  instance:
+    preferIpAddress: true
+  client:
+    serviceUrl:
+      defaultZone: http://discovery:8761/eureka/
