--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,9 @@
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.2.4.RELEASE</version>
-        <relativePath/>
-        <!-- lookup parent from repository -->
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-parent</artifactId>
+        <version>Angel.SR6</version>
     </parent>
 
     <properties>
@@ -32,12 +30,6 @@
         <connection>scm:git:git://github.com/NationalLibraryOfNorway/dewey-service.git</connection>
         <developerConnection>scm:git:git@github.com:NationalLibraryOfNorway/dewey-service.git</developerConnection>
     </scm>
-
-    <dependencyManagement>
-        <dependencies>
-
-        </dependencies>
-    </dependencyManagement>
 
     <distributionManagement>
         <snapshotRepository>
